invisible hamburger menu on ios fixed

--- a/client/src/components/Navbar_Header.scss
+++ b/client/src/components/Navbar_Header.scss
@@ -130,7 +130,7 @@ body {
             }
             div {
                 width: 30px;
-                height: 1%;
+                height: 1px;
                 margin: 4px 0;
                 background-color: #c9c9c9;
                 border-radius: 10px;
